manifests/homepage/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: homepage-vs
  namespace: default
spec:
  gateways:
  - public-gateway
  hosts:
  - "explorewithnk.com"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: homepage.default.svc.cluster.local
        port:
          number: 80
